* Curve: Login page gaps in IE (Login.template.php, index.css) [Bug 3532]
git-svn-id: https://devel.simplemachines.org/code/smf/trunk@8672 a96bbafc-d752-43aa-a6db-eed64a5f2cf9

--- a/Themes/curve/css/index.css
+++ b/Themes/curve/css/index.css
@@ -310,6 +310,10 @@ h4.titlebg img.icon
 	width: 480px;
 	margin: 0 auto;
 }
+.login dl
+{
+	overflow: auto;
+}
 .login dt, .login dd
 {
 	margin: 0;
